# Nmap Changelog ($Id$); -*-text-*-

o [Ncat][GH#773] Ncat in server mode properly handles TLS renegotiations and
  other situations where SSL_read returns a non-fatal error. This was causing
  SSL-over-TCP connections to be dropped. [Daniel Miller]

o [Ncat][GH#157] Ncat will now continue trying to connect to each resolved
  address for a hostname before declaring the connection refused, allowing it
  to fallback from IPv6 to IPv4 or to connect to names that use DNS failover.
  [Jaromir Koncicky, Michal Hlavinka]

o [NSE][GH#743] New script broadcast-ospf2-discover discovers OSPF 2 routers
  and neighbors. OSPFv2 authentication is supported. [Emiliano Ticci]

o [NSE][GH#740] New script http-vuln-cve2017-5638 checks for the RCE bug in
  Apache Struts. [Seth Jackson]

o [NSE] Added several commands to redis-info to extract listening addresses,
  connected clients, active channels, and cluster nodes. [Vasiliy Kulikov]

o [GH#679][GH#681][NSE] Refreshed script http-robtex-reverse-ip, reflecting
  changes at the source site (www.robtex.com). [aDoN]

o [GH#708][NSE] TLS SNI now works correctly for NSE HTTP requests initiated
  with option any_af. As an added benefit, option any_af is now available for
  all connections via comm.lua, not just HTTP requests. [nnposter]

o [NSE][GH#713] New script impress-remote-discover attempts to pair with the
  LibreOffice Impress presentation remote service and extract version info.
  Pairing is PIN-protected, and the script can optionally brute-force the PIN.
  New service probe and match line also added. [Jeremy Hiebert]

o [GH#620][GH#715][NSE] Added 8 new http-enum fingerprints for Hadoop
  infrastructure components. [Thomas Debize, Varunram Ganesh]

o [GH#629][NSE] Added two new fingerprints to http-default-accounts
  (APC Management Card, older NetScreen ScreenOS) [Steve Benson, nnposter]

o [GH#716][NSE] Fix for oracle-tns-version which was sending an invalid TNS
  probe due to a string escaping mixup. [Alexandr Savca]
